<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:layout_margin="20dp">
    <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="*">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pulse1Hint" android:paddingTop="20dp"/>
            <EditText
                    android:id="@+id/editPulse1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:digits="0123456789\n"
                    android:inputType="numberDecimal"
                    android:padding="20dp"
                    android:selectAllOnFocus="true"
                    android:textStyle="bold"
                    tools:ignore="Autofill,LabelFor"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pulse2Hint"/>
            <EditText
                    android:id="@+id/editPulse2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:digits="0123456789\n"
                    android:inputType="numberDecimal"
                    android:padding="20dp"
                    android:selectAllOnFocus="true"
                    android:textStyle="bold"
                    tools:ignore="Autofill,LabelFor"/>

        </TableRow>
    </TableLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mesDialogButtonHeigh"
                android:layout_weight="1"
                android:text="@string/startTimer"
                android:id="@+id/timerView"
                android:textColor="@android:color/background_light"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mesDialogButtonHeigh"
                android:layout_weight="1"
                android:id="@+id/computeButton"
                android:text="@string/computeButtonText"
                android:textColor="@android:color/background_light"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"/>
    </LinearLayout>
    <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:padding="20dp"
            android:textStyle="bold"/>
</LinearLayout>